--- a/practice.css
+++ b/practice.css
@@ -521,7 +521,8 @@ align-content: center;
 }  
 }
 .navbar{ 
-  height: 50px;
+  height: 50px; 
+  backdrop-filter: blur(10px);
 }  
 @media (max-width: 408px){
 #logo{ 
